[gd_scene load_steps=20 format=2]

[ext_resource path="res://boxes/SwitchPlayer.gd" type="Script" id=1]
[ext_resource path="res://assets/sprites/boxes/switchOnRight.png" type="Texture" id=2]
[ext_resource path="res://assets/sprites/boxes/switchOffTop.png" type="Texture" id=3]
[ext_resource path="res://assets/sprites/boxes/switchOffRight.png" type="Texture" id=4]
[ext_resource path="res://assets/sprites/boxes/switchOnLeft.png" type="Texture" id=5]
[ext_resource path="res://assets/sprites/boxes/switchOnTop.png" type="Texture" id=6]
[ext_resource path="res://assets/sprites/boxes/switchOffLeft.png" type="Texture" id=7]
[ext_resource path="res://assets/sprites/boxes/switchOnBottom.png" type="Texture" id=8]
[ext_resource path="res://assets/sprites/boxes/switchOffBottom.png" type="Texture" id=9]
[ext_resource path="res://assets/sprites/boxes/circleOff.png" type="Texture" id=10]
[ext_resource path="res://assets/sprites/boxes/circleOn.png" type="Texture" id=11]
[ext_resource path="res://assets/sprites/boxes/squareOn.png" type="Texture" id=12]
[ext_resource path="res://assets/sprites/boxes/triangleOff.png" type="Texture" id=13]
[ext_resource path="res://assets/sprites/boxes/triangleOn.png" type="Texture" id=14]
[ext_resource path="res://assets/sprites/boxes/squareOff.png" type="Texture" id=15]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 8 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 8 ) ],
"loop": true,
"name": "BottomOn",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "LeftOn",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "TopOn",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "TopOff",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "RightOn",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "RightOff",
"speed": 5.0
}, {
"frames": [ ExtResource( 9 ) ],
"loop": true,
"name": "BottomOff",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ) ],
"loop": true,
"name": "LeftOff",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 12 ) ],
"loop": true,
"name": "SquareOn",
"speed": 5.0
}, {
"frames": [ ExtResource( 10 ) ],
"loop": true,
"name": "CircleOff",
"speed": 5.0
}, {
"frames": [ ExtResource( 14 ) ],
"loop": true,
"name": "TriangleOn",
"speed": 5.0
}, {
"frames": [ ExtResource( 13 ) ],
"loop": true,
"name": "TriangleOff",
"speed": 5.0
}, {
"frames": [ ExtResource( 15 ) ],
"loop": true,
"name": "SquareOff",
"speed": 5.0
}, {
"frames": [ ExtResource( 11 ) ],
"loop": true,
"name": "CircleOn",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 8, 8 )

[node name="SwitchPlayer" type="Area2D"]
collision_layer = 2
collision_mask = 2
script = ExtResource( 1 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
shape = SubResource( 1 )

[node name="BlocSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )
animation = "LeftOn"

[node name="ShapeSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 3 )
animation = "SquareOff"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 4 )

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
